# audio-playground

./: .copier-answers.yml  .gitignore  .ruff.toml  PR_MESSAGE.md  README.md  Taskfile.yml  check_durations.py  pyproject.toml  setup_conda_env_variables.sh
.github/: COVERAGE_BADGE.md
.github/workflows/: qa.yml
audio_playground/: __init__.py  app_context.py
audio_playground/cli/: __main__.py  common.py  doctor.py  test_run.py  test_run2.py  test_run3.py
audio_playground/cli/convert/: __init__.py  to_wav.py
audio_playground/cli/extract/: __init__.py  demucs.py  process_demucs.py  process_sam_audio.py  sam_audio.py
audio_playground/cli/merge/: __init__.py  concat.py
audio_playground/cli/segment/: __init__.py  split.py
audio_playground/cli/subcommand/: __init__.py  subsubcommand.py
audio_playground/config/: app_config.py
audio_playground/core/: __init__.py  merger.py  segmenter.py  wav_converter.py
audio_playground/logging/: logging.py
docs/: requirements.md
docs/inspiration/: README.md  __init__.py  align.py  config.py  model.py  original_sam_audio.py  patcher.py  processor.py  rope.py  text_encoder.py  transformer.py
src/audio_playground/cli/: common.py
src/audio_playground/cli/convert/: to_wav.py
src/audio_playground/cli/extract/: __init__.py  demucs.py  process_sam_audio.py  sam_audio.py
src/audio_playground/cli/merge/: concat.py
src/audio_playground/cli/segment/: split.py
src/audio_playground/config/: app_config.py
src/audio_playground/core/: demucs_processor.py  merger.py  performance_tracker.py  sam_audio_optimizer.py  sam_audio_processor.py  segmenter.py  wav_converter.py
src/audio_playground/core/separator/: __init__.py  demucs.py  sam_audio.py
tests/: __init__.py  test_import.py
tests/cli/: conftest.py  test_cli.py  test_simple_command.py
tests/cli/convert/: test_to_wav.py
tests/cli/extract/: test_extract.py  test_process_demucs.py  test_process_sam_audio.py  test_sam_audio.py
tests/cli/merge/: __init__.py  test_concat.py
tests/cli/segment/: test_split.py
tests/cli/subcommand/: test_subcommand.py  test_subsubcommand.py
tests/config/: test_app_config.py  test_phase_0_chain_residuals.py
tests/core/: test_performance_tracker.py  test_sam_audio_optimizer.py
tests/logging/: test_logging.py
