[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-playground"
version = "0.1.0"
description = "Playing with sam-audio"
authors = [
    { name = "gotofritz", email = "gotofritz@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.10.6",
  "pydantic-settings>=2.6.1",
  "click>=8.1.7",
  "rich>=14",
  "sam-audio@file:///Users/fritz/work/sam-audio-playground/sam-audio",
  "pydub",
  "torch",
  "torchaudio",
]

[project.urls]
homepage = "https://github.com/gotofritz/audio-playground"
source = "https://github.com/gotofritz/audio-playground"
changelog = "https://github.com/gotofritz/audio-playground/blob/main/CHANGELOG.md"
documentation = "https://github.com/gotofritz/audio-playground"
issues = "https://github.com/gotofritz/audio-playground/issues"

[project.scripts]
audio-playground = "audio_playground.cli.__main__:cli"

[dependency-groups]
dev = [
    "copier>=9.7.1,<10",
    "commitizen>=3,<4",
    "faker>=30,<31",
    "mypy>=1,<2",
    "polyfactory>=2,<3",
    "pre-commit>=3,<4",
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "pytest-datadir>=1,<2",
    "pytest-env>=1,<2",
    "ruff>=0.5,<0.6",
    "toml-sort>=0.24.2,<0.25",
    "safety>=3.2.9,<4",
]

[tool.commitizen]  # https://commitizen-tools.github.io/commitizen/config/
bump_message = "bump(release): v$current_version → v$new_version"
tag_format = "v$version"
update_changelog_on_bump = true
version_provider = "pep621"

[tool.mypy]  # https://mypy.readthedocs.io/en/latest/config_file.html
exclude = ["build/"]
strict = true
disallow_subclassing_any = false
disallow_untyped_decorators = false
check_untyped_defs = true
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true

[tool.pytest.ini_options]  # https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
pythonpath = [
  ".", "audio_playground",
]
testpaths = [
    "tests",
]
addopts = [
    "--cov=audio_playground/",
    "--cov-report=term",
    "--cov-report=html:coverage/html",
    "--cov-report=xml:coverage/coverage.xml",
    "--junitxml=coverage/junit/test-results.xml",
    "--color=yes"
]

[tool.pytest_env]
ENVIRONMENT = "test"

[tool.coverage.run]
omit = [
    "tests/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
]

[tool.tomlsort]
all = false
in_place = true
no_comments = false
no_header_comments = false
no_footer_comments = false
no_inline_comments = false
no_block_comments = false
no_sort_tables = true
sort_table_keys = false
sort_inline_tables = false
sort_inline_arrays = false
trailing_comma_inline_array = false
ignore_case = true

[tool.tomlsort.overrides."dependencies"]
table_keys = true

[tool.tomlsort.overrides."dev"]
table_keys = true

[tool.tomlsort.overrides."typing"]
table_keys = true
